# CS204-BrowserNetworkAnalysis

./: .gitignore  README.md  analysis.ipynb  flake.nix  har_metrics.py  pyproject.toml
browserbench/: __init__.py  cli.py  config.py  har_analysis.py  manifest.py  page_metrics_analysis.py  runner.py  server.py
configs/: benchmark.example.toml  firefox-smoke.nixos.toml
data/templates/: manual_run_log.csv
docs/: methodology.md  repo-structure.md  setup-nixos.md  team-protocol.md  troubleshooting.md
metrics/brave/: easy.csv  easy_mime.csv  easy_summary.csv  hard.csv  hard_mime.csv  hard_summary.csv  medium.csv  medium_mime.csv  medium_summary.csv  throttled.csv  throttled_summary.csv
metrics/chrome/: east_summary.csv  easy.csv  easy_mime.csv  hard.csv  hard_mime.csv  hard_summary.csv  medium.csv  medium_mime.csv  medium_summary.csv  throttled.csv  throttled_mime.csv  throttled_summary.csv
metrics/firefox/: easy.csv  easy_mime.csv  easy_summary.csv  hard.csv  hard_mime.csv  hard_summary.csv  medium.csv  medium_mime.csv  medium_summary.csv  throttled.csv  throttled_mime.csv  throttled_summary.csv
metrics/safari/: easy.csv  easy_mime.csv  easy_summary.csv  hard.csv  hard_mime.csv  hard_summary.csv  medium.csv  medium_mime.csv  medium_summary.csv  throttled.csv  throttled_mime.csv  throttled_summary.csv
metrics/tor/: easy.csv  easy_mime.csv  easy_summary.csv  hard.csv  hard_mime.csv  hard_summary.csv  medium.csv  medium_mime.csv  medium_summary.csv  throttled.csv  throttled_summary.csv
scenarios/: index.html
site/: index.html  styles.css
site/heavy/: hero.js  (+6 more)
(+11 files in other folders)
