[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "browserbench"
version = "0.1.0"
description = "Reproducible browser network benchmark scaffold for local lab experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
runner = ["playwright>=1.45"]

[project.scripts]
browserbench = "browserbench.cli:main"

[tool.setuptools]
packages = ["browserbench"]
